--- a/index.html
+++ b/index.html
@@ -3,65 +3,132 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DR9.AI - Inteligência Artificial e Automação</title>
+<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+<meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="assets/favicon.png">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="logo">DR9.AI</div>
-    <nav>
-      <ul>
-        <li><a href="#home">Início</a></li>
-        <li><a href="#services">Serviços</a></li>
-        <li><a href="#contact">Contato</a></li>
-      </ul>
-    </nav>
-    <div class="contact-buttons">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn-whatsapp">WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn-telegram">Telegram</a>
-    </div>
-  </header>
 
-  <!-- Hero Section -->
-  <section id="home">
-    <h1>Bem-vindo à DR9.AI</h1>
-    <p>Softwares, IA e automação para impulsionar seu negócio.</p>
-    <div class="hero-buttons">
-      <a href="#services" class="btn-primary">Ver Serviços</a>
+<!-- Header -->
+<header id="header">
+    <div class="container">
+        <div class="header-content">
+            <a href="#home" class="logo">
+                <i class="fas fa-robot logo-icon"></i> DR9.AI
+            </a>
+            <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
+            <nav id="mainNav">
+                <ul>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-  </section>
+</header>
 
-  <!-- Services Section -->
-  <section id="services">
-    <h2>Serviços Disponíveis</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <h3>Licenças de Computador</h3>
-        <p>Controle total e segurança avançada em licenças digitais.</p>
-      </div>
-      <div class="service-card">
-        <h3>Ferramentas Técnicas</h3>
-        <p>Unlock, Chimera e outras ferramentas de ponta.</p>
-      </div>
-      <div class="service-card">
-        <h3>Automação e IA</h3>
-        <p>Gerenciamento de planilhas e posts programados no Instagram.</p>
-      </div>
+<!-- Hero Section -->
+<section class="hero" id="home">
+    <div class="container">
+        <div class="hero-content">
+            <h1>DR9.AI</h1>
+            <p>Softwares, IA e Automação Descomplicada</p>
+
+            <div class="buttons">
+                <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" data-pixel="YOUR_PIXEL_ID">
+                    <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                </a>
+                <a href="https://t.me/dr9iSuporte" class="btn btn-outline" data-pixel="YOUR_PIXEL_ID">
+                    <i class="fab fa-telegram"></i> Falar no Telegram
+                </a>
+            </div>
+        </div>
     </div>
-  </section>
+</section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Entre em Contato</h2>
-    <p>Envie uma mensagem e nossa equipe responderá rapidamente.</p>
-    <div class="contact-grid">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn-whatsapp">WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn-telegram">Telegram</a>
+<!-- Services Section -->
+<section class="features" id="services">
+    <div class="container">
+        <div class="section-title">
+            <h2>Nossas Soluções em IA</h2>
+            <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
+        </div>
+        <div class="features-grid">
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fas fa-key"></i></div>
+                <h3>DM para Licenças Exclusivas</h3>
+                <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
+                <span class="status status-available">Disponível</span>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fas fa-brain"></i></div>
+                <h3>IA e Automação para Empreendedores</h3>
+                <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
+                <span class="status status-available">Disponível</span>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+                <h3>Licenças Digitais Fáceis de Usar</h3>
+                <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
+                <span class="status status-available">Disponível</span>
+            </div>
+        </div>
     </div>
-  </section>
+</section>
 
-  <script src="script.js"></script>
+<!-- CTA Section -->
+<section class="cta" id="contact">
+    <div class="container">
+        <div class="cta-content">
+            <h2>Pronto para revolucionar seu negócio?</h2>
+            <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
+            <div class="buttons">
+                <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" data-pixel="YOUR_PIXEL_ID">
+                    <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                </a>
+                <a href="https://t.me/dr9iSuporte" class="btn btn-outline" data-pixel="YOUR_PIXEL_ID">
+                    <i class="fab fa-telegram"></i> Falar no Telegram
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>DR9.AI</h3>
+                <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Serviços</h3>
+                <ul>
+                    <li>IA e Automação</li>
+                    <li>Licenças Digitais</li>
+                    <li>Consultoria em TI</li>
+                    <li>Sistemas Personalizados</li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contato</h3>
+                <ul>
+                    <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
+                    <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
+                    <li>Email: contato@dr9ai.com</li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; 2025 DR9.AI - Todos os direitos reservados.
+        </div>
+    </div>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
