--- a/index.html
+++ b/index.html
@@ -1,134 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
-<meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+    <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Particles Background -->
+    <div id="particles-js"></div>
 
-<!-- Header -->
-<header id="header">
-    <div class="container">
-        <div class="header-content">
-            <a href="#home" class="logo">
-                <i class="fas fa-robot logo-icon"></i> DR9.AI
-            </a>
-            <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
-            <nav id="mainNav">
-                <ul>
-                    <li><a href="#home">Início</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</header>
+    <!-- Floating Elements -->
+    <div class="floating floating-1">🚀</div>
+    <div class="floating floating-2">🤖</div>
+    <div class="floating floating-3">💡</div>
 
-<!-- Hero Section -->
-<section class="hero" id="home">
-    <div class="container">
-        <div class="hero-content">
-            <h1>DR9.AI</h1>
-            <p>Softwares, IA e Automação Descomplicada</p>
-
-            <div class="buttons">
-                <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" data-pixel="YOUR_PIXEL_ID">
-                    <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+    <!-- Header -->
+    <header id="header">
+        <div class="container">
+            <div class="header-content">
+                <a href="#" class="logo">
+                    <img src="assets/logo.png" alt="DR9.AI" class="logo-icon">
+                    <span>DR9.AI</span>
                 </a>
-                <a href="https://t.me/dr9iSuporte" class="btn btn-outline" data-pixel="YOUR_PIXEL_ID">
-                    <i class="fab fa-telegram"></i> Falar no Telegram
-                </a>
+                <button class="mobile-menu" id="mobileMenu">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <nav id="mainNav">
+                    <ul>
+                        <li><a href="#home">Início</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-    </div>
-</section>
+    </header>
 
-<!-- Services Section -->
-<section class="features" id="services">
-    <div class="container">
-        <div class="section-title">
-            <h2>Nossas Soluções em IA</h2>
-            <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
-        </div>
-        <div class="features-grid">
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-key"></i></div>
-                <h3>DM para Licenças Exclusivas</h3>
-                <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
-                <span class="status status-available">Disponível</span>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-brain"></i></div>
-                <h3>IA e Automação para Empreendedores</h3>
-                <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
-                <span class="status status-available">Disponível</span>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-                <h3>Licenças Digitais Fáceis de Usar</h3>
-                <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
-                <span class="status status-available">Disponível</span>
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="container">
+            <div class="hero-content">
+                <h1>DR9.AI</h1>
+                <p>Softwares, IA e Automação Descomplicada</p>
+                <div class="buttons">
+                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" onclick="trackPixel('WHATSAPP_PIXEL_ID')">
+                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                    </a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline" onclick="trackPixel('TELEGRAM_PIXEL_ID')">
+                        <i class="fab fa-telegram"></i> Falar no Telegram
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- CTA Section -->
-<section class="cta" id="contact">
-    <div class="container">
-        <div class="cta-content">
-            <h2>Pronto para revolucionar seu negócio?</h2>
-            <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
-            <div class="buttons">
-                <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" data-pixel="YOUR_PIXEL_ID">
-                    <i class="fab fa-whatsapp"></i> Falar no WhatsApp
-                </a>
-                <a href="https://t.me/dr9iSuporte" class="btn btn-outline" data-pixel="YOUR_PIXEL_ID">
-                    <i class="fab fa-telegram"></i> Falar no Telegram
-                </a>
+    <!-- Features Section -->
+    <section class="features" id="services">
+        <div class="container">
+            <div class="section-title">
+                <h2>Nossas Soluções em IA</h2>
+                <p>Tecnologia avançada para impulsionar seu negócio ao próximo nível</p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-key"></i></div>
+                    <h3>DM para Licenças Exclusivas</h3>
+                    <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
+                    <span class="status status-available">Disponível</span>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-brain"></i></div>
+                    <h3>IA e Automação para Empreendedores</h3>
+                    <p>Automação de planilhas, posts programados em Instagram, e suporte a sistemas de gestão.</p>
+                    <span class="status status-available">Disponível</span>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+                    <h3>Licenças Digitais Fáceis de Usar</h3>
+                    <p>Integração com pacotes Adobe, Windows, Chimera, Unclock e outras ferramentas do mercado.</p>
+                    <span class="status status-available">Disponível</span>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Footer -->
-<footer>
-    <div class="container">
-        <div class="footer-content">
-            <div class="footer-column">
-                <h3>DR9.AI</h3>
-                <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
-            </div>
-            <div class="footer-column">
-                <h3>Serviços</h3>
-                <ul>
-                    <li>IA e Automação</li>
-                    <li>Licenças Digitais</li>
-                    <li>Consultoria em TI</li>
-                    <li>Sistemas Personalizados</li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h3>Contato</h3>
-                <ul>
-                    <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
-                    <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
-                    <li>Email: contato@dr9ai.com</li>
-                </ul>
+    <!-- CTA Section -->
+    <section class="cta" id="contact">
+        <div class="container">
+            <div class="cta-content">
+                <h2>Pronto para revolucionar seu negócio?</h2>
+                <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+                <div class="buttons">
+                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" onclick="trackPixel('WHATSAPP_PIXEL_ID')">
+                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                    </a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline" onclick="trackPixel('TELEGRAM_PIXEL_ID')">
+                        <i class="fab fa-telegram"></i> Falar no Telegram
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="copyright">
-            &copy; 2025 DR9.AI - Todos os direitos reservados.
-        </div>
-    </div>
-</footer>
+    </section>
 
-<script src="script.js"></script>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h3>DR9.AI</h3>
+                    <p>Inteligência Artificial e Automação Descomplicada para empreendedores.</p>
+                    <div class="social-links">
+                        <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="footer-column">
+                    <h3>Serviços</h3>
+                    <ul>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> IA e Automação</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Licenças Digitais</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoria em TI</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Sistemas Personalizados</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Contato</h3>
+                    <ul>
+                        <li><a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                        <li><a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i> Telegram</a></li>
+                        <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
