--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="particles-js"></div>
 
+    <!-- Ícones flutuantes -->
     <div class="floating floating-1">🚀</div>
     <div class="floating floating-2">🤖</div>
     <div class="floating floating-3">💡</div>
 
+    <!-- HEADER -->
     <header id="header">
         <div class="container">
             <div class="header-content">
@@ -25,25 +27,32 @@
                     <ul>
                         <li><a href="#home">Início</a></li>
                         <li><a href="#services">Serviços</a></li>
-                        <li><a href="#contact">Contato</a></li>
+
+                        <!-- DROPDOWN -->
                         <li class="menu-dropdown">
-                            <a href="#">📋 Menu</a>
+                            <a href="#">
+                                📋 Menu <i class="fas fa-chevron-down"></i>
+                            </a>
                             <ul class="dropdown-content">
-                                <li><a href="#">1️⃣ Licenças Exclusivas</a></li>
-                                <li><a href="#">2️⃣ Desbloqueio Técnico - Chimera</a></li>
-                                <li><a href="#">3️⃣ Desbloqueio IMEI (Privado)</a></li>
-                                <li><a href="#">4️⃣ Licenças PC (Adobe, Office)</a></li>
-                                <li><a href="#">5️⃣ Consultoria TI</a></li>
-                                <li><a href="#">6️⃣ Fluxo de IA Automática</a></li>
-                                <li><a href="#">7️⃣ Planilhas & Posts Programados</a></li>
+                                <li><a href="#"><i class="fas fa-key"></i> Licenças Digitais</a></li>
+                                <li><a href="#"><i class="fas fa-laptop-code"></i> Suporte Técnico</a></li>
+                                <li><a href="#"><i class="fas fa-unlock-alt"></i> Unlock Chimera</a></li>
+                                <li><a href="#"><i class="fas fa-mobile-alt"></i> IMEI Unlock <small>(privado)</small></a></li>
+                                <li><a href="#"><i class="fas fa-desktop"></i> Licenças PC (Adobe, Corel)</a></li>
+                                <li><a href="#"><i class="fas fa-robot"></i> Automação com IA</a></li>
+                                <li><a href="#"><i class="fas fa-table"></i> Planilhas Inteligentes</a></li>
+                                <li><a href="#"><i class="fas fa-calendar-alt"></i> Postagens Programadas</a></li>
                             </ul>
                         </li>
+
+                        <li><a href="#contact">Contato</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
+    <!-- HERO -->
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
@@ -51,30 +60,20 @@
                 <p>Softwares, IA e Automação Descomplicada</p>
 
                 <div class="checkbox-list">
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">Licenças Digitais Exclusivas</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">IA e Automação Inteligente</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">Suporte Técnico e Consultoria</div></div>
+                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
+                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
+                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
                 </div>
 
                 <div class="buttons">
-                    <a href="https://wa.me/5562991476973?text=👋%20Olá,%20seja%20bem-vindo%20à%20DR9.AI!%0A
-Escolha%20uma%20opção:%0A%0A
-1️⃣%20Licenças%20Exclusivas%0A
-2️⃣%20Desbloqueio%20Técnico%20-%20Chimera%0A
-3️⃣%20Desbloqueio%20IMEI%20(privado)%0A
-4️⃣%20Licenças%20PC%20(Adobe,%20Office)%0A
-5️⃣%20Consultoria%20TI%0A
-6️⃣%20Fluxo%20IA%20Automática%0A
-7️⃣%20Planilhas%20e%20Posts%20Programados%0A%0A
-👉%20Digite%20o%20número%20da%20opção."
-                    class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-
-                    <a href="https://t.me/dr9iSuporte?start=menu" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+                    <a href="https://wa.me/5562991476973" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- SERVIÇOS -->
     <section class="features" id="services">
         <div class="container">
             <div class="section-title">
@@ -84,56 +83,47 @@ Escolha%20uma%20opção:%0A%0A
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon"><i class="fas fa-key"></i></div>
-                    <h3>Licenças Digitais</h3>
-                    <p>Sistema de licenciamento seguro e fácil de usar, com controle e relatórios completos.</p>
+                    <h3>Licenças Exclusivas</h3>
+                    <p>Controle total, segurança avançada e suporte dedicado.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon"><i class="fas fa-brain"></i></div>
-                    <h3>IA e Automação</h3>
-                    <p>Inteligência Artificial personalizada para simplificar processos e aumentar produtividade.</p>
+                    <h3>IA para Negócios</h3>
+                    <p>Automatize processos, economize tempo e aumente sua produtividade.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-laptop-code"></i></div>
-                    <h3>Consultoria Técnica</h3>
-                    <p>Suporte profissional em TI, sistemas personalizados e integração de ferramentas digitais.</p>
+                    <div class="feature-icon"><i class="fas fa-desktop"></i></div>
+                    <h3>Licenças para Computador</h3>
+                    <p>Adobe, Corel e outras ferramentas com suporte simplificado.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- CTA -->
     <section class="cta" id="contact">
         <div class="container">
             <div class="cta-content">
                 <h2>Pronto para revolucionar seu negócio?</h2>
-                <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
+                <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
                 <div class="buttons">
-                    <a href="https://wa.me/5562991476973?text=👋%20Olá,%20seja%20bem-vindo%20à%20DR9.AI!%0A
-Escolha%20uma%20opção:%0A%0A
-1️⃣%20Licenças%20Exclusivas%0A
-2️⃣%20Desbloqueio%20Técnico%20-%20Chimera%0A
-3️⃣%20Desbloqueio%20IMEI%20(privado)%0A
-4️⃣%20Licenças%20PC%20(Adobe,%20Office)%0A
-5️⃣%20Consultoria%20TI%0A
-6️⃣%20Fluxo%20IA%20Automática%0A
-7️⃣%20Planilhas%20e%20Posts%20Programados%0A%0A
-👉%20Digite%20o%20número%20da%20opção."
-                    class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-
-                    <a href="https://t.me/dr9iSuporte?start=menu" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+                    <a href="https://wa.me/5562991476973" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- FOOTER -->
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>DR9.AI</h3>
-                    <p>Inteligência Artificial e Automação para empreendedores que buscam inovação e resultados.</p>
+                    <p>Inteligência Artificial e Automação Premium para empreendedores que buscam inovação e resultados.</p>
                     <div class="social-links">
                         <a href="https://wa.me/5562991476973"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
@@ -155,7 +145,7 @@ Escolha%20uma%20opção:%0A%0A
                     <ul>
                         <li><a href="https://wa.me/5562991476973"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
                         <li><a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i> Telegram</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
+                        <li><a href="mailto:contato@dr9ai.com"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -165,23 +155,22 @@ Escolha%20uma%20opção:%0A%0A
         </div>
     </footer>
 
+    <!-- SCRIPTS -->
     <script>
-        // Menu dropdown
-        document.querySelectorAll('.menu-dropdown').forEach(drop => {
-            drop.addEventListener('mouseenter', () => {
-                drop.querySelector('.dropdown-content').style.display = 'block';
-            });
-            drop.addEventListener('mouseleave', () => {
-                drop.querySelector('.dropdown-content').style.display = 'none';
-            });
+        // Mobile menu
+        const mobileMenu = document.getElementById("mobileMenu");
+        const mainNav = document.getElementById("mainNav");
+        mobileMenu.addEventListener("click", () => {
+            mainNav.classList.toggle("active");
         });
 
-        // Mobile menu toggle
-        const mobileMenu = document.getElementById('mobileMenu');
-        const mainNav = document.getElementById('mainNav');
-        mobileMenu.addEventListener('click', () => {
-            mainNav.classList.toggle('active');
+        // Dropdown menu
+        const dropdown = document.querySelector(".menu-dropdown > a");
+        const dropdownContent = document.querySelector(".dropdown-content");
+        dropdown.addEventListener("click", (e) => {
+            e.preventDefault();
+            dropdownContent.classList.toggle("show");
         });
     </script>
 </body>
-</html> 
+</html>
