Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -173,4 +173,26 @@
         });
     </script>
 </body>
+<!-- MODAL MENU INTERATIVO -->
+<div id="serviceModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Olá! 👋 Bem-vindo à DR9.AI</h2>
+        <p>Escolha um dos serviços abaixo para que possamos te atender:</p>
+        <div class="service-buttons">
+            <button onclick="contactWhatsApp('Licenças Digitais')">💻 Licenças Digitais</button>
+            <button onclick="contactWhatsApp('Suporte Técnico')">🛠 Suporte Técnico</button>
+            <button onclick="contactWhatsApp('Unlock Chimera')">🔓 Unlock Chimera</button>
+            <button onclick="contactWhatsApp('IMEI Unlock')">📱 IMEI Unlock (Privado)</button>
+            <button onclick="contactWhatsApp('Automação IA')">🤖 Automação com IA</button>
+            <button onclick="contactWhatsApp('Planilhas Inteligentes')">📊 Planilhas Inteligentes</button>
+            <button onclick="contactWhatsApp('Postagens Programadas')">📅 Postagens Programadas</button>
+        </div>
+    </div>
+</div>
+
+<!-- BOTÃO FIXO -->
+<div id="floatingMenu">
+    <button id="openModal"><i class="fas fa-comment-dots"></i> Fale Conosco</button>
+</div>
 </html>
