Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
     <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- PARTÍCULAS ANIMADAS -->
     <div id="particles-js"></div>
-
-    <!-- Ícones flutuantes -->
     <div class="floating floating-1">🚀</div>
     <div class="floating floating-2">🤖</div>
     <div class="floating floating-3">💡</div>
@@ -27,24 +26,6 @@
                     <ul>
                         <li><a href="#home">Início</a></li>
                         <li><a href="#services">Serviços</a></li>
-
-                        <!-- DROPDOWN -->
-                        <li class="menu-dropdown">
-                            <a href="#">
-                                📋 Menu <i class="fas fa-chevron-down"></i>
-                            </a>
-                            <ul class="dropdown-content">
-                                <li><a href="#"><i class="fas fa-key"></i> Licenças Digitais</a></li>
-                                <li><a href="#"><i class="fas fa-laptop-code"></i> Suporte Técnico</a></li>
-                                <li><a href="#"><i class="fas fa-unlock-alt"></i> Unlock Chimera</a></li>
-                                <li><a href="#"><i class="fas fa-mobile-alt"></i> IMEI Unlock <small>(privado)</small></a></li>
-                                <li><a href="#"><i class="fas fa-desktop"></i> Licenças PC (Adobe, Corel)</a></li>
-                                <li><a href="#"><i class="fas fa-robot"></i> Automação com IA</a></li>
-                                <li><a href="#"><i class="fas fa-table"></i> Planilhas Inteligentes</a></li>
-                                <li><a href="#"><i class="fas fa-calendar-alt"></i> Postagens Programadas</a></li>
-                            </ul>
-                        </li>
-
                         <li><a href="#contact">Contato</a></li>
                     </ul>
                 </nav>
@@ -52,28 +33,41 @@
         </div>
     </header>
 
-    <!-- HERO -->
+    <!-- HERO / DESTAQUE -->
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
                 <h1>DR9.AI</h1>
-                <p>Softwares, IA e Automação Descomplicada</p>
+                <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
                 <div class="checkbox-list">
-                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
+                    <div class="checkbox-item">
+                        <div class="checkbox-icon">✓</div>
+                        <div class="checkbox-text">DM para Licenças Exclusivas</div>
+                    </div>
+                    <div class="checkbox-item">
+                        <div class="checkbox-icon">✓</div>
+                        <div class="checkbox-text">IA e Automação para Empreendedores</div>
+                    </div>
+                    <div class="checkbox-item">
+                        <div class="checkbox-icon">✓</div>
+                        <div class="checkbox-text">Licenças Digitais Fáceis de Usar</div>
+                    </div>
                 </div>
 
                 <div class="buttons">
-                    <a href="https://wa.me/5562991476973" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary">
+                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                    </a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline">
+                        <i class="fab fa-telegram"></i> Falar no Telegram
+                    </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- SERVIÇOS -->
+    <!-- SERVIÇOS / FEATURES -->
     <section class="features" id="services">
         <div class="container">
             <div class="section-title">
@@ -83,35 +77,39 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon"><i class="fas fa-key"></i></div>
-                    <h3>Licenças Exclusivas</h3>
-                    <p>Controle total, segurança avançada e suporte dedicado.</p>
+                    <h3>DM para Licenças Exclusivas</h3>
+                    <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon"><i class="fas fa-brain"></i></div>
-                    <h3>IA para Negócios</h3>
-                    <p>Automatize processos, economize tempo e aumente sua produtividade.</p>
+                    <h3>IA e Automação para Empreendedores</h3>
+                    <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-desktop"></i></div>
-                    <h3>Licenças para Computador</h3>
-                    <p>Adobe, Corel e outras ferramentas com suporte simplificado.</p>
+                    <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+                    <h3>Licenças Digitais Fáceis de Usar</h3>
+                    <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
                     <span class="status status-available">Disponível</span>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- CTA -->
+    <!-- CTA / CONTATO -->
     <section class="cta" id="contact">
         <div class="container">
             <div class="cta-content">
                 <h2>Pronto para revolucionar seu negócio?</h2>
-                <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+                <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
                 <div class="buttons">
-                    <a href="https://wa.me/5562991476973" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary">
+                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+                    </a>
+                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline">
+                        <i class="fab fa-telegram"></i> Falar no Telegram
+                    </a>
                 </div>
             </div>
         </div>
@@ -123,9 +121,9 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>DR9.AI</h3>
-                    <p>Inteligência Artificial e Automação Premium para empreendedores que buscam inovação e resultados.</p>
+                    <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
                     <div class="social-links">
-                        <a href="https://wa.me/5562991476973"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -143,56 +141,19 @@
                 <div class="footer-column">
                     <h3>Contato</h3>
                     <ul>
-                        <li><a href="https://wa.me/5562991476973"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                        <li><a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
                         <li><a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i> Telegram</a></li>
-                        <li><a href="mailto:contato@dr9ai.com"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
+                        <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
+                <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
 
-    <!-- SCRIPTS -->
-    <script>
-        // Mobile menu
-        const mobileMenu = document.getElementById("mobileMenu");
-        const mainNav = document.getElementById("mainNav");
-        mobileMenu.addEventListener("click", () => {
-            mainNav.classList.toggle("active");
-        });
-
-        // Dropdown menu
-        const dropdown = document.querySelector(".menu-dropdown > a");
-        const dropdownContent = document.querySelector(".dropdown-content");
-        dropdown.addEventListener("click", (e) => {
-            e.preventDefault();
-            dropdownContent.classList.toggle("show");
-        });
-    </script>
+    <!-- SCRIPT -->
+    <script src="script.js"></script>
 </body>
-<!-- MODAL MENU INTERATIVO -->
-<div id="serviceModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Olá! 👋 Bem-vindo à DR9.AI</h2>
-        <p>Escolha um dos serviços abaixo para que possamos te atender:</p>
-        <div class="service-buttons">
-            <button onclick="contactWhatsApp('Licenças Digitais')">💻 Licenças Digitais</button>
-            <button onclick="contactWhatsApp('Suporte Técnico')">🛠 Suporte Técnico</button>
-            <button onclick="contactWhatsApp('Unlock Chimera')">🔓 Unlock Chimera</button>
-            <button onclick="contactWhatsApp('IMEI Unlock')">📱 IMEI Unlock (Privado)</button>
-            <button onclick="contactWhatsApp('Automação IA')">🤖 Automação com IA</button>
-            <button onclick="contactWhatsApp('Planilhas Inteligentes')">📊 Planilhas Inteligentes</button>
-            <button onclick="contactWhatsApp('Postagens Programadas')">📅 Postagens Programadas</button>
-        </div>
-    </div>
-</div>
-
-<!-- BOTÃO FIXO -->
-<div id="floatingMenu">
-    <button id="openModal"><i class="fas fa-comment-dots"></i> Fale Conosco</button>
-</div>
 </html>
