Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- PARTÍCULAS ANIMADAS -->
+
+    <!-- ANIMAÇÕES PARTICULARES -->
     <div id="particles-js"></div>
     <div class="floating floating-1">🚀</div>
     <div class="floating floating-2">🤖</div>
@@ -153,7 +154,6 @@
         </div>
     </footer>
 
-    <!-- SCRIPT -->
     <script src="script.js"></script>
 </body>
 </html>
